// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders loading with no devotion 1`] = `
<div
  className="locked-ends locked-sides floating"
>
  <div
    className="floating__item"
  >
    <Loading />
  </div>
</div>
`;

exports[`renders with image 1`] = `
<div>
  <Meta
    image="http://test.com/1x1.jpg"
    meta={
      Array [
        Object {
          "content": "article",
          "property": "og:type",
        },
      ]
    }
  />
  <div
    title="Devotional"
  >
    <DevotionsSingleContent
      classes={Array []}
      devotion={
        Object {
          "content": Object {
            "body": "<h1>devotion</h1>",
            "images": Array [
              Object {
                "fileLabel": "1:1",
                "url": "http://test.com/1x1.jpg",
              },
            ],
          },
        }
      }
      onClickLink={[Function]}
    />
  </div>
</div>
`;

exports[`renders with scripture 1`] = `
<div>
  <Meta
    image="http://test.com/1x1.jpg"
    meta={
      Array [
        Object {
          "content": "article",
          "property": "og:type",
        },
      ]
    }
  />
  <div
    title="Devotional"
  >
    <DevotionsSingleContent
      classes={Array []}
      devotion={
        Object {
          "content": Object {
            "body": "<h1>devotion</h1>",
            "images": Array [
              Object {
                "fileLabel": "1:1",
                "url": "http://test.com/1x1.jpg",
              },
            ],
          },
          "scripture": Array [
            Object {
              "book": "Job",
              "passage": "2",
            },
          ],
        }
      }
      onClickLink={[Function]}
    />
  </div>
</div>
`;

exports[`renders without scripture or image 1`] = `
<div>
  <Meta
    id="1"
    image={null}
    meta={
      Array [
        Object {
          "content": "article",
          "property": "og:type",
        },
      ]
    }
  />
  <div
    title="Devotional"
  >
    <DevotionsSingleContent
      classes={Array []}
      devotion={
        Object {
          "content": Object {
            "body": "<h1>devotion</h1>",
            "images": Array [],
          },
          "id": "1",
        }
      }
      onClickLink={[Function]}
    />
  </div>
</div>
`;
